Addon BoolProperty saved in 3.5 does not preserve value when opened in earlier Blender versions #104902

Closed
opened 2023-02-17 23:52:49 +01:00 by Ryan Guy · 2 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.94

Blender Version
Broken: version:
- 3.5.0 Beta, branch: blender-v3.5-release, commit date: 2023-02-16 21:59, hash: efc2e5134f5d
- 3.4.1, branch: blender-v3.4-release, commit date: 2022-12-20 08:50, hash: rBef9ca44dee7f
Worked: N/A

Short description of error

I have an addon that contains a BoolProperty as well as other property types stored into a PropertyGroup. I have noticed that when I change the BoolProperty, and save the file in Blender 3.5, the value reverts back to the default when the file is opened in Blender 3.4.1 or earlier.

This seems to only affect the BoolProperty and not other property types, but I have not tested all types.

property_comparison.jpg

When opening the file in an earlier version of Blender, an error is displayed in the system console:

IDP_DirectLinkProperty: found unknown IDProperty type 10, reset to Integer one !

Here is a minimal addon example. The properties can be viewed and adjusted in the Physics properties.

my_bug_report_addon.py

bl_info = {
    "name": "My Bug Report Add-on",
    "blender": (2, 80, 0),
    "category": "Physics",
}

import bpy

class MyPropertyGroup(bpy.types.PropertyGroup):
    is_enabled: bpy.props.BoolProperty()
    int_value: bpy.props.IntProperty()
    float_value: bpy.props.FloatProperty()
    string_value: bpy.props.StringProperty()

def append_to_PHYSICS_PT_my_physics_panel(self, context):
    obj = context.active_object
    self.layout.prop(obj.my_settings, "is_enabled")
    self.layout.prop(obj.my_settings, "int_value")
    self.layout.prop(obj.my_settings, "float_value")
    self.layout.prop(obj.my_settings, "string_value")

def register():
    bpy.utils.register_class(MyPropertyGroup)
    bpy.types.Object.my_settings = bpy.props.PointerProperty(type=MyPropertyGroup)
    bpy.types.PHYSICS_PT_add.append(append_to_PHYSICS_PT_my_physics_panel)

def unregister():
    del bpy.types.Object.my_settings
    bpy.utils.unregister_class(MyPropertyGroup)
    bpy.types.PHYSICS_PT_add.remove(append_to_PHYSICS_PT_my_physics_panel)

if __name__ == "__main__":
    register()

Exact steps for others to reproduce the error

  1. Install my_bug_report_addon.py addon in Blender 3.5 and 3.4.1
  2. Open Blender 3.5
    • Navigate to the Physics Properties
    • Change appended property values from their default values
    • Save Blend file
  3. Open the Blend file in Blender 3.4.1
    • Examine the properties and notice how the is_enabled BoolProperty has reverted to the default value (False) while other properties remain consistent

I have attached an example Blend file that was saved in Blender 3.5.

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.94 **Blender Version** Broken: version: - 3.5.0 Beta, branch: blender-v3.5-release, commit date: 2023-02-16 21:59, hash: `efc2e5134f5d` - 3.4.1, branch: blender-v3.4-release, commit date: 2022-12-20 08:50, hash: `rBef9ca44dee7f` Worked: N/A **Short description of error** I have an addon that contains a BoolProperty as well as other property types stored into a PropertyGroup. I have noticed that when I change the BoolProperty, and save the file in Blender 3.5, the value reverts back to the default when the file is opened in Blender 3.4.1 or earlier. This seems to only affect the BoolProperty and not other property types, but I have not tested all types. ![property_comparison.jpg](/attachments/6881c96a-4e10-4217-a7fe-334a1f0a0c7b) When opening the file in an earlier version of Blender, an error is displayed in the system console: ``` IDP_DirectLinkProperty: found unknown IDProperty type 10, reset to Integer one ! ``` Here is a minimal addon example. The properties can be viewed and adjusted in the Physics properties. [my_bug_report_addon.py](/attachments/ef247649-0626-4876-9baf-3cce5cdd3f1a) ```python bl_info = { "name": "My Bug Report Add-on", "blender": (2, 80, 0), "category": "Physics", } import bpy class MyPropertyGroup(bpy.types.PropertyGroup): is_enabled: bpy.props.BoolProperty() int_value: bpy.props.IntProperty() float_value: bpy.props.FloatProperty() string_value: bpy.props.StringProperty() def append_to_PHYSICS_PT_my_physics_panel(self, context): obj = context.active_object self.layout.prop(obj.my_settings, "is_enabled") self.layout.prop(obj.my_settings, "int_value") self.layout.prop(obj.my_settings, "float_value") self.layout.prop(obj.my_settings, "string_value") def register(): bpy.utils.register_class(MyPropertyGroup) bpy.types.Object.my_settings = bpy.props.PointerProperty(type=MyPropertyGroup) bpy.types.PHYSICS_PT_add.append(append_to_PHYSICS_PT_my_physics_panel) def unregister(): del bpy.types.Object.my_settings bpy.utils.unregister_class(MyPropertyGroup) bpy.types.PHYSICS_PT_add.remove(append_to_PHYSICS_PT_my_physics_panel) if __name__ == "__main__": register() ``` **Exact steps for others to reproduce the error** 1. Install ```my_bug_report_addon.py``` addon in Blender 3.5 and 3.4.1 2. Open Blender 3.5 - Navigate to the Physics Properties - Change appended property values from their default values - Save Blend file 3. Open the Blend file in Blender 3.4.1 - Examine the properties and notice how the _is_enabled_ BoolProperty has reverted to the default value (False) while other properties remain consistent I have attached an example Blend file that was saved in Blender 3.5.
Ryan Guy added the
Priority
Normal
Status
Needs Triage
Type
Report
labels 2023-02-17 23:52:49 +01:00
Jesse Yurkovich added
Module
Core
Status
Needs Info from Developers
and removed
Status
Needs Triage
labels 2023-02-18 23:31:40 +01:00

@HooglyBoogly This is just a casualty of introducing the proper boolean property type (type=10) and there's already a data-loss warning when loading 3.5 files in prior versions.

I'm not sure if a similar type-swap could be introduced to these like what was done in 2ea47e0def. It would seem to have to be done at the lowest level inside idprop.c (IDP_BlendWrite or thereabouts) I think.

@HooglyBoogly This is just a casualty of introducing the proper boolean property type (type=10) and there's already a data-loss warning when loading 3.5 files in prior versions. I'm not sure if a similar type-swap could be introduced to these like what was done in 2ea47e0def6. It would seem to have to be done at the lowest level inside `idprop.c` (`IDP_BlendWrite` or thereabouts) I think.
Member

Yeah, I didn't take into account this case I guess. I think it makes sense to do a type swap for forward compatibility, at least for now. It's easy for booleans (not necessarily boolean arrays?) anyway.

Yeah, I didn't take into account this case I guess. I think it makes sense to do a type swap for forward compatibility, at least for now. It's easy for booleans (not necessarily boolean arrays?) anyway.
Hans Goudey added
Status
Confirmed
Type
Bug
and removed
Status
Needs Info from Developers
Type
Report
labels 2023-02-20 14:12:14 +01:00
Hans Goudey added this to the 3.5 milestone 2023-02-20 14:12:19 +01:00
Hans Goudey self-assigned this 2023-02-20 14:12:27 +01:00
Hans Goudey added this to the Nodes & Physics project 2023-02-20 14:12:33 +01:00
Hans Goudey modified the project from Nodes & Physics to Core 2023-02-20 14:12:38 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-02-21 18:41:50 +01:00
Bastien Montagne removed this from the Core project 2023-07-03 12:48:52 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#104902
No description provided.