Fix #104902: Use forward compatible integers for boolean RNA properties

Write RNA properties backed by IDProperties with the `IDP_INT` type like
before ef68a37e5d55e17adf4c. That keeps forward compatibility, because
earlier versions don't support the boolean type. At some point in a future
release we can remove the forward compatibility. 4.0 is a good time to
do that because forward compatibility will be broken in other ways.

This commit also adds support for reading integer arrays for boolean
property defaults, which was only half-way supported before.

Pull Request #104995